[package]
name = "bevy-top-down-shooter"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.0-rc.2"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3